Flatten some operators.